--- a/Desafio-7-Estrategia-de-Autenticacion/package.json
+++ b/Desafio-7-Estrategia-de-Autenticacion/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio-6-implementacion-de-login",
+  "name": "desafio-7-estrategia-de-autenticacion",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,6 +18,8 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.9.3",
     "mongoose-paginate-v2": "^1.7.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.6.1"
   }
 }
